helm/jenkins/jenkins/nginx-jenkins.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: jenkins.sun.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
