helm/jenkins/jenkins/traefik-jenkins.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: jenkins.qoocar.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
